fix: disable horizontal scrolling 2

--- a/style.css
+++ b/style.css
@@ -20,9 +20,15 @@ html{
     scroll-behavior:smooth;
 }
 
-body {
-    max-width: 100%;
+/* disable horizontal scrolling */
+/* https://stackoverflow.com/questions/4192277/disable-horizontal-scroll-on-mobile-web */
+html, body {
     overflow-x: hidden;
+}
+
+body {
+    /* max-width: 100%; */
+    position: relative;
     margin: 0;
     padding: 0;
     font-family: 'Quicksand', sans-serif;
